--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
             <div id="top-menu">
                 <table id="top-menu-table">
+                    <!-- フレックスボックスに改善すべき。 -->
                     <td class="top-menu-content-link"><a href="#">PAGE1</a></td>
                     <td class="top-menu-content-link"><a href="#">PAGE2</a></td>
                     <td class="top-menu-content-link"><a href="#">PAGE3</a></td>
@@ -25,30 +26,35 @@
             
         </div>
     </div>
-    <div id="contet">
+    <div id="content">
                 <h1>content</h1>
             </div>
             <div id="footer">
                     <div id="footer-links">
-                        <table>
+                        <table id="footer-links-contents">
                             <tr>
                                 <th>List A</th>
                                 <th>List B</th>
+                                <th>List C</th>
                             </tr>
                             <tr>
                                 <td><a href="#">Link</a></td>
                                 <td><a href="#">Link</a></td>
+                                <td><a href="#">Link</a></td>
                             </tr>
                                                         <tr>
                                 <td><a href="#">Link</a></td>
                                 <td><a href="#">Link</a></td>
+                                <td><a href="#">Link</a></td>
                             </tr>
                                                         <tr>
+                                <td><a href="#">Link</a></td>
                                 <td><a href="#">Link</a></td>
                                 <td><a href="#">Link</a></td>
                             </tr>
                         </table>
                     </div>
+                    <hr>
                     <div id="footer-logo">
                         <h3><a href="#">STReam</a></h3>
                         <small id="copyright">Copyright 2025 STReam, Cemlo All rights reserved.</small>
