--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="top-menu">
                 <nav id="top-menu-table">
-                    <!-- フNeeded to add ul&il -->
+                    <!-- Needed to add ul&il -->
                     <a href="#">PAGE1</a>
                     <a href="#">PAGE1</a>
                     <a href="#">PAGE1</a>
