Add main content template, contact form, and base HTML structure for STReam Project
- Created content-sample-main.html with main slideshow, about section, news, roadmap, project introduction, gallery, and FAQ.
- Added form-sample.html for user contact with fields for name, email, category, position, interests, and message.
- Established template.html as the base structure including header, footer, and JavaScript for opening animation and slideshow functionality.

--- a/others/.templates/template.html
+++ b/others/.templates/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STReam Project | Top</title>
+    <title>STReam Project | Official Site</title>
     <link rel="stylesheet" href="Styles/default.css">
 </head>
 <body class="opening-active"> <!-- ロゴ表示中はスクロール禁止クラスを初期付与 -->
@@ -28,7 +28,7 @@
                     <div class="nav-item"><a href="#">Home</a></div>
                     <div class="nav-item"><a href="#news-section">News</a></div>
                     
-                    <!-- Aboutメガメニュー実装部分 -->
+                    <!-- About メガメニュー実装部分 -->
                     <div class="nav-item">
                         <a href="#about-section">About ▾</a>
                         <div class="mega-menu">
