--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-
+---
+title: Top
+layout: default
+date: 2026-01-18
+tags: []
+---
     <main id="content">
         <!-- メインスライドショー -->
         <div class="slideshow-container full-width" id="main-slideshow" data-controls="true">
